rubygems: Remove Hoe from build-dependency-whitelist
It's now in the 'ruby' stratum, so the import tool can ignore it.

The build-dependency-whitelist field is now empty, and I'm not sure
it's actually useful to have it but I won't remove the code yet.

--- a/baserockimport/data/rubygems.yaml
+++ b/baserockimport/data/rubygems.yaml
@@ -8,9 +8,10 @@ lorry-prefix: ruby-gems/
 # tools because of the number of circular dependencies. Instead, only those
 # tools which are known to be required at Gem build time are listed as
 # build-dependencies, and any other :development dependencies are ignored.
-build-dependency-whitelist:
-  - hoe
+build-dependency-whitelist: []
   # rake is bundled with Ruby, so it is not included in the whitelist.
+  # hoe is included in the 'ruby' stratum
+  # rake-compiler is included in the 'ruby' stratum
 
 # The following Gems don't provide a source_code_uri in their Gem metadata.
 # Ideally ... they would do.
